manifests/base/resources/subscriptions/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: subscriptions
    chart: subscriptions-1.0.2
    heritage: Helm
    release: subscriptions
  name: subscriptions
spec:
  ports:
  - name: subscriptions
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: subscriptions
    release: subscriptions
  type: ClusterIP
---
